--- a/static/css/style.css
+++ b/static/css/style.css
@@ -206,90 +206,71 @@ input[type="submit"]:hover {
 }
 
 /* Server Status Bereich */
-#online-players {
-    margin-top: 20px;
-}
-
-#players-list {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-#players-list .player {
-    margin: 10px;
-    text-align: center;
-}
-
-#players-list .player img {
-    border-radius: 50%;
-}
-
-#players-list .player span {
-    display: block;
-    margin-top: 5px;
-    font-weight: bold;
-}
-
 #server-status {
-    margin-top: 40px;
+    font-family: 'Arial', sans-serif;
     padding: 20px;
-    background-color: #f4f4f4;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    border: 2px solid #ccc;
+    max-width: 600px;
+    margin: 0 auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+#status-message {
     text-align: center;
+    font-size: 20px;
+    margin-bottom: 20px;
 }
 
-#server-status h2 {
-    font-size: 2rem;
-    color: #333;
-    margin-bottom: 15px;
+.online {
+    color: #28a745;
 }
 
-#status-message {
-    font-size: 1.5rem;
-    color: #333;
-    font-weight: bold;
+.offline {
+    color: #dc3545;
 }
 
-#server-status p {
-    font-size: 1rem;
+#server-info {
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+#server-info p {
+    text-align: center;
+    font-size: 16px;
+    margin: 10px 0;
+}
+
+#server-info strong {
     color: #555;
-    margin-top: 10px;
 }
 
-#server-ip,
-#players-online,
-#motd {
-    font-size: 1.2rem;
-    color: #333;
+#loading-spinner {
+    text-align: center;
+    font-size: 18px;
 }
 
-#server-status p a {
-    color: #007bff;
-    text-decoration: none;
+.loader {
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
 }
 
-#server-status p a:hover {
-    text-decoration: underline;
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
-/* Farbliche Unterschiede für den Status */
-#status-message {
-    font-size: 1.5rem;
-    color: #ffffff;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-#status-message.online {
-    background-color: #28a745;
-    /* Grün für Online */
-}
-
-#status-message.offline {
-    background-color: #dc3545;
-    /* Rot für Offline */
-}
 
 /* Stil für den TNT-Block */
 .tnt-block {
